--- a/package.json
+++ b/package.json
@@ -9,16 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.5.1",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/material": "^6.1.9",
+    "@supabase/supabase-js": "^2.46.2",
+    "i18next": "^24.0.2",
+    "next": "15.0.3",
+    "next-i18next": "^15.4.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "react-i18next": "^15.1.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "15.0.3"
-  }
+    "eslint-config-next": "15.0.3",
+    "typescript": "^5"
+  },
+  "sideEffects": [
+    "./src/config/i18n.js"
+  ]
 }
